--- a/index.ejs
+++ b/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>hey</title>
+  <title>Hello World</title>
 </head>
 <body>
   <h1>hey</h1>
