--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>hey</title>
+  <title>API</title>
 </head>
 <body>
-  <h1>hey</h1>
+  <h1>Hello World</h1>
 </body>
 </html>
